--- a/4.0-training_models/training_models.ipynb
+++ b/4.0-training_models/training_models.ipynb
@@ -869,6 +869,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42eb818d",
+   "metadata": {},
+   "source": [
+    "### Early Stopping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "f8197dce",
@@ -953,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "de430dec",
    "metadata": {},
    "outputs": [
@@ -972,16 +980,18 @@
     "lim = 6 \n",
     "t = np.linspace(-lim,lim,100)\n",
     "sig = 1/(1 + np.exp(-t))\n",
-    "plt.plot([-lim,lim],[0,0],\"k-\")\n",
-    "plt.plot([-lim,lim],[0.5,0.5],\"k:\")\n",
-    "plt.plot([-lim,lim],[1,1],\"k:\")\n",
     "\n",
-    "plt.vlines(x=0,ymin=0,ymax=1,colors='k',linestyles='-')\n",
+    "plt.hlines(y=0,xmin=-lim,xmax=lim,colors='k',linestyle='-')\n",
+    "plt.hlines(y=0.5,xmin=-lim,xmax=lim,colors='k',linestyle=':')\n",
     "\n",
-    "plt.plot(t,sig,label=\"sigmoid function\")\n",
-    "plt.legend(loc='upper right')\n",
+    "plt.vlines(x=0,ymin=0,ymax=1,colors='k',linestyle='-')\n",
+    "plt.plot(t,sig,label='sigmoid function')\n",
     "plt.axis([-lim,lim,0,1])\n",
-    "plt.gca().set_yticks([0,0.25,0.5,0.75,1])\n",
+    "\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.axis([-lim,lim,0,1])\n",
+    "plt.yticks([0,0.25,0.50,0.75,1.0])\n",
+    "\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -2144,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "2e52e909",
    "metadata": {},
    "outputs": [
@@ -2160,12 +2170,14 @@
     }
    ],
    "source": [
-    "log_reg.predict(np.array([[1.7],[1.5]]))"
+    "log_reg.predict(np.array([[1.7],[1.5]]))\n",
+    "# we get true for first input because its beyond decision_boundary 1.65\n",
+    "# we get true for first input because its behind decision_boundary 1.56"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "4cbe8265",
    "metadata": {},
    "outputs": [
@@ -2211,14 +2223,20 @@
     "log_reg = LogisticRegression(C=2,random_state=42)\n",
     "log_reg.fit(X_train,y_train)\n",
     "\n",
-    "#x0: petal_length\n",
-    "#x1: petal width\n",
-    "# with mesh grid we create dense feature ranges for each feature \n",
-    "# 500 values for petal length,petal width\n",
-    "# form all possible combinations for petal width and petal length\n",
+    "# why do we use meshgrid \n",
+    "# A classifier predicts P(virginica|petal_length,petal_width). \n",
+    "# We want to visualize the probabilities and decision boundary\n",
+    "# x0: petal_length\n",
+    "# x1: petal width\n",
+    "# with mesh grid we create dense grid of points in feature space\n",
     "\n",
-    "x0,x1 = np.meshgrid(np.linspace(2.9,7,500).reshape(-1,1),\n",
-    "                    np.linspace(0.8,2.7,200).reshape(-1,1))\n",
+    "petal_length_range = np.linspace(2.9,7,500)\n",
+    "petal_width_range = np.linspace(0.8,2.7,200)\n",
+    "\n",
+    "# x0,x1 toghether describe the coordinates of every point where the model is evaluated \n",
+    "x0,x1 = np.meshgrid(petal_length_range,petal_width_range)\n",
+    "\n",
+    "\n",
     "print(x0.shape)\n",
     "print(x1.shape)\n",
     "\n",
@@ -2231,14 +2249,16 @@
     "y_proba = log_reg.predict_proba(X_new)\n",
     "print(y_proba)\n",
     "zz = y_proba[:,1].reshape(x0.shape)\n",
-    "# zz is predicted prob of virginica \n",
+    "# zz is predicted prob of virginica (dont overthink so much about this)\n",
+    "# why we reshape zz is because y_proba is a 1d array to plot contours we need to make it 2d (so we reshape it)\n",
     "# at every point on meshgrid its reshaped back into grid form so it plotted as contours \n",
     "\n",
     "plt.figure(figsize=(8, 4))\n",
     "\n",
+    "# Probability heatmap\n",
     "plt.contourf(x0, x1, zz, levels=20, cmap=\"RdBu\", alpha=0.6)\n",
     "\n",
-    "# Decision boundary (P = 0.5)\n",
+    "# Decision boundary (P = 0.5) This draws a curve\n",
     "plt.contour(x0, x1, zz, levels=[0.5], colors=\"k\", linewidths=2)\n",
     "\n",
     "# Training points\n",
@@ -3236,7 +3256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "71ce04ce",
    "metadata": {},
    "outputs": [
@@ -3265,6 +3285,7 @@
     "\n",
     "zz1 = y_proba[:, 1].reshape(x0.shape)\n",
     "zz = y_predict.reshape(x0.shape)\n",
+    "# 2D decision region map showing which class the model predicts at each location\n",
     "\n",
     "plt.figure(figsize=(10, 4))\n",
     "plt.plot(X[y == 2, 0], X[y == 2, 1], \"g^\", label=\"Iris virginica\")\n",
